--- a/express-api/package.json
+++ b/express-api/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "npm run build && pm2 start ecosystem.config.js",
     "dev": "nodemon"
   },
   "keywords": [],
@@ -20,6 +22,7 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "mysql": "^2.18.1",
+    "pm2": "^5.3.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
   }
